--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -72,10 +72,8 @@
     <string name="birthday_metric" />
     <string name="birthday_notification_age_term" />
     <string name="birthday_notification_text_days_later">%1$s zile până la %4$s (%5$s)</string>
-    <string name="birthday_notification_text_three_days_later">3 zile până la %3$s (%4$s)</string>
     <string name="birthday_notification_text_today">Nu uitaţi să-i spuneţi "La Mulţi Ani!"</string>
     <string name="birthday_notification_title_days_later">"Se apropie %2$s a lui %1$s."</string>
-    <string name="birthday_notification_title_three_days_later">Se apropie %2$s a lui %1$s</string>
     <string name="birthday_notification_title_today">%1$s sărbătoreşte %3$s</string>
     <string name="birthday_notification_type_term_lunar" />
     <string name="birthday_term">ziua de naştere</string>
@@ -95,8 +93,9 @@
   <string name="card_manager">Administrator cărți</string>
   <string name="card_title_change">Pentru o schimbare</string>
     <string name="change_response_title">Modificaţi răspunsul</string>
-    <string name="chinese_leap">Intercalare</string>
-    <string name="chongsha">Fantome</string>
+  <string name="check_reminded_text">Vezi memento-uri</string>
+  <string name="chinese_leap">Intercalare</string>
+  <string name="chongsha">Fantome</string>
   <string name="click_watch">Apăsați aici pentru a viziona</string>
   <string name="common_fri">vineri</string>
   <string name="common_mon">luni</string>
@@ -120,6 +119,7 @@
   <string name="credit_card_number_label">Număr card:</string>
   <string name="credit_card_overdue">Card expirat</string>
   <string name="credit_card_repayment_count">Rambursare în 1$s zile</string>
+  <string name="credit_card_source">Memento rambursare prin SMS</string>
   <string name="credit_currency">RON</string>
   <string name="credit_detail_amount_label">De asemenea, ar trebui</string>
   <string name="credit_detail_sms_content">textul original</string>
@@ -127,11 +127,6 @@
   <string name="credit_event_card_title">Plățile prin card de credit</string>
   <string name="credit_event_delete_successfully">Evenimentul Plată prin card de credit a fost șters cu succes</string>
   <string name="credit_event_title">Comisionul pentru cardul de credit</string>
-    <string name="cta_notice_checkbox">Nu se afişează din nou</string>
-    <string name="cta_notice_message">\"Notificarea despre data naşterii\" în Calendar vă va reaminti despre ziua de naștere a contactelor, însă va accesa contactele dvs. Sunteţi de acord?</string>
-    <string name="cta_notice_ok">De acord</string>
-    <string name="cta_notice_title">Notificare</string>
-    <string name="cta_notify_settings">Se notifică la accesarea contactelor</string>
     <string name="custom">Personalizat (nu se poate personaliza pe telefon)</string>
     <string name="daily">Zilnic</string>
     <string name="data_notice_change_settings">Modificare setări</string>
@@ -189,6 +184,8 @@
     <string name="event_action_edit">Editaţi</string>
     <string name="event_all_day_label">Toată ziua</string>
     <string name="event_create">Eveniment nou</string>
+  <string name="event_created_fail_text">Nu a reușit să creeze memento-uri pentru evenimente</string>
+  <string name="event_created_text">Rasa a fost creat pentru a reaminti</string>
     <string name="event_date_format">d/MM</string>
     <string name="event_delete">Ştergeţi evenimentul</string>
     <string name="event_edit">Modificaţi evenimentul</string>
@@ -209,13 +206,23 @@
     <string name="event_info_where">"Unde: "</string>
     <string name="event_lunar_month">Lună</string>
     <string name="event_show_more">Mai multe opţiuni</string>
-  <string name="event_subscirbe_detail_title">Detalii eveniment</string>
     <string name="event_title">Titlu</string>
     <string name="event_view">Vizualizaţi evenimentul</string>
     <string name="every_weekday">În fiecare zi lucrătoare (Luni – Vineri)</string>
   <string name="every_year_month_of_day">%1$s%2$s zi</string>
     <string name="exist_calendar">Abonat</string>
     <string name="festival_detail_title">Festival</string>
+  <string name="fortune_birthday">zi de naștere</string>
+  <string name="fortune_card_caiwei">poziţia financiară：</string>
+  <string name="fortune_card_set_bazi">Stabilirea de naștere</string>
+  <string name="fortune_card_taohua">piersic floare：</string>
+  <string name="fortune_card_working">Avere carieră academică：</string>
+  <string name="fortune_card_zhengchong">este roșu：</string>
+  <string name="fortune_gender">gen</string>
+  <string name="fortune_label">Horoscop zilnic</string>
+  <string name="fortune_name">apel</string>
+  <string name="fortune_name_hint">Vă rugăm să introduceți</string>
+  <string name="fortune_no_name">Vă rugăm să completați apelul</string>
     <string name="free_day_default_banner_title">Zi liberă!</string>
     <string name="from_google_group_calendar">Calendar Google</string>
     <string name="gadget_no_events">Niciun eveniment viitor în calendar</string>
@@ -227,6 +234,7 @@
     <string name="hint_description">Descriere</string>
     <string name="hint_what">Conținut memento</string>
     <string name="hint_where">Locaţie</string>
+  <string name="homepage_today">azi</string>
   <string name="horoscope_card_comprehensive">Complet:</string>
   <string name="horoscope_card_financial">Bani:</string>
   <string name="horoscope_card_love">Dragoste:</string>
@@ -242,12 +250,12 @@
     <string name="insert_event_dialog_title">Atenție</string>
     <string name="insert_event_toast_add_failed">"Nu s-a putut adăuga"</string>
     <string name="insert_event_toast_add_success">Eveniment creat</string>
-    <string name="internet_connection_notification">Notificare conexiune la internet</string>
-    <string name="internet_connection_notification_descrip">Se afișează notificarea de conexiune la internet de fiecare dată când se accesează Calendarul</string>
  <string name="joke_card_icon_text">clovn %1$s</string> 
     <string name="jump_date">Salt</string>
     <string name="jump_date_full">Salt la o dată</string>
     <string name="label_recent_events">Evenimente recente</string>
+  <string name="live_text">vii</string>
+  <string name="living_text">On Air</string>
     <string name="loading">Doar o secundă…</string>
     <string name="local_calendar_display_name">Calendar local</string>
     <string name="local_owner_account_name">Cont local</string>
@@ -295,18 +303,13 @@
     <string name="no_title_label">(Fără titlu)</string>
     <string name="not_exist_topic_list">Nu se poate obține o listă de calendar subscris</string>
     <string name="not_synced">nesincronizat</string>
-    <string name="notice_button_exit">Ieșire</string>
-    <string name="notice_button_ok">De acord</string>
-    <string name="notice_declaration_ignore">"Nu arăta din nou"</string>
-    <string name="notice_title_agreement">Conexiune la internet</string>
-    <string name="notice_title_request">Solicitare</string>
   <string name="notification_online">%1$s: %2$s eveniment nou</string>
     <string name="online_calendar_activity_label">Abonare la calendar</string>
-    <string name="online_notice_message">"Utilizând acest serviciu, sunteți de acord cu %1$s și %2$s Xiaomi. Unele caracteristici necesită conectarea la internet pentru a funcționa normal."</string>
     <string name="online_reminder_change_text">Modificare memento</string>
     <string name="online_reminder_header_text">Memento</string>
     <string name="online_reminder_minutes_text">Minute</string>
     <string name="online_reminder_slider_text">Activați memento</string>
+    <string name="path_calendar">Aplicații de sistem/Calendar/Setări</string>
     <string name="pengzu">Ciupire</string>
     <string name="prefDialogTitle_vibrateWhen">Vibrare</string>
     <string name="pref_error_no_ringtone_select">Nicio selecţie</string>
@@ -387,6 +390,7 @@
     <string name="saving_event">Eveniment salvat</string>
     <string name="saving_event_with_guest">Actualizările vor fi trimise</string>
     <string name="search">Căutaţi</string>
+    <string name="search_calendar">Calendar;Agendă;Memento</string>
     <string name="search_history_cleared">Istoricul căutărilor a fost şters</string>
     <string name="search_title">Căutaţi în calendarele dvs.</string>
     <string name="select_date">Selectaţi data</string>
@@ -398,6 +402,7 @@
     <string name="setting_others">Altele</string>
   <string name="setting_sms_import">SMS-uri import evenimente</string>
     <string name="setting_wifi_mode">Doar Wi-Fi</string>
+    <string name="settings_calendar">Calendar</string>
     <string name="show_controls">Afişaţi comenzile</string>
     <string name="show_day_view">Afişaţi ziua</string>
     <string name="show_newer_events">Atingeţi pentru a vedea evenimente după %1$s</string>
@@ -475,7 +480,6 @@
     <string name="travel_loaded">Susţinut de Veryzhun</string>
     <string name="travel_loading">Doar o secundă…</string>
     <string name="travel_local">Destinaţie</string>
-    <string name="travel_notice_message">Calendarul trebuie să se conecteze la internet și să acceseze locația dvs., pentru a afișa informațiile de călătorie.</string>
     <string name="travel_seat_number_text">Loc</string>
     <string name="travel_train_number_text">Tren</string>
     <string name="travel_train_station">Gară</string>
@@ -483,8 +487,6 @@
     <string name="user_notice_button_ok">OK</string>
     <string name="user_notice_declaration_ignore">"Nu arăta din nou"</string>
     <string name="user_notice_message">"Utilizând acest produs acceptați termenii din %2$s și %1$s Xiaomi. Unele caracteristici necesită conectarea la internet, accesul la locație, agendă și mesagerie pentru a funcționa normal."</string>
-    <string name="user_notice_online_ok">Acceptați și continuați</string>
-    <string name="user_notice_online_title">Termeni și condiții</string>
     <string name="user_notice_title">Atenționare</string>
     <string name="user_notification">Notificare utilizator</string>
     <string name="user_notification_descrip">Arată o notificare de fiecare dată când se accesează aplicația Calendar</string>
